Changed direct reference to Nuget reference

--- a/Kovai.AtomicScope.BamSample/Kovai.AtomicScope.BamSample.csproj
+++ b/Kovai.AtomicScope.BamSample/Kovai.AtomicScope.BamSample.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Kovai.AtomicScope.Bam\Kovai.AtomicScope.Bam.csproj" />
+    <PackageReference Include="Kovai.AtomicScope.Bam" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
